[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Game.gd" id="1_game"]
[ext_resource type="Script" path="res://SoundButton.gd" id="2_soundbtn"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time: 15"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LivesContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="QuestionLabel" type="Label" parent="Content"]
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Question goes here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="OptionsContainer" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="FeedbackPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FeedbackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="FeedbackLabel" type="Label" parent="FeedbackPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Correct!"
horizontal_alignment = 1

[node name="ExplanationLabel" type="Label" parent="FeedbackPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Explanation text goes here."
horizontal_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="FeedbackPanel/VBoxContainer"]
script = ExtResource("2_soundbtn")
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Next Question"

[node name="HomeButton" type="Button" parent="FeedbackPanel/VBoxContainer"]
script = ExtResource("2_soundbtn")
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"

[node name="QuestionTimer" type="Timer" parent="."]
one_shot = true
